# brandforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  brandkit.py  campaign.py  captions.py  config.py  genblaze_compat.py  guard.py  index.py  main.py  models.py  pipeline.py  schemas.py  security.py  storage.py
docs/: DEMO_SCRIPT.md  architecture.md
examples/: smoke_b2_pipeline.py  smoke_variant_set.py
prompts/: brand_voice.md
static/: app.css  app.js
templates/: base.html  gallery.html
tests/: test_brandkit.py  test_campaign.py  test_captions.py  test_config.py  test_genblaze_compat.py  test_guard.py  test_index.py  test_main.py  test_models.py  test_pipeline.py  test_storage.py
video/: .gitignore  README.md  scenes.yaml
video/assets/: architecture.mmd  mermaid-config.json
video/cards/: _card.css  outro.html  placeholder.html  prod.html  title.html
video/scripts/: _common.py  assemble.py  build_scenes.py  make_subtitles.py  qa_report.py  record_b2.mjs  record_shots.mjs  render_cards.mjs  tts_narrate.py
video/subtitles/: en.srt  ja.srt
