[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brandforge"
version = "0.1.0"
description = "Brand-consistent SNS media generation on Genblaze + Backblaze B2"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that exercise external services (mocked unless keys present)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
